<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">EMM - Vulnerable</string>

	<string name="loginscreen_username">Username</string>
	<string name="loginscreen_password">Enter PIN to continue</string>
	<string name="loginscreen_login_button">Unlock</string>

	<string name="summaryscreen_accounts_button">Accounts</string>
	<string name="summaryscreen_transfer_button">Transfer</string>
	<string name="summaryscreen_statement_button">Statement</string>

	<string name="statementscreen_clear_button">Clear</string>

	<string name="transferscreen_fromtext">From</string>
	<string name="transferscreen_totext">To</string>
	<string name="transferscreen_amount_text">Amount</string>
	<string name="transferscreen_transfer_button">Transfer</string>
	<string name="transferscreen_enteramount_hint">Enter amount</string>
	<string name="transferscreen_success">Transfer completed</string>

	<string name="accountsscreen_text_summary">Account 1\n\n\tChecking Account\n\tBalance:
		$53.00\n\nAccount 2\n\n\tSavings Account\n\tBalance: $2876.28\n
	</string>

	<string name="setupunlockactivity_configureprompt">Setup your keylock (required each time you open EMM)</string>
	<string name="setupunlockactivity_password">PIN or Password</string>
	<string name="setupunlockactivity_repeat_password">Confirm</string>
	<string name="setupunlockactivity_donebutton">Set</string>

	<string name="setservercredentialsactivity_configureprompt">Enter the LabServer bank credentials</string>
	<string name="setservercredentialsactivity_username">Username</string>
	<string name="setservercredentialsactivity_password">Password</string>
	<string name="setservercredentialsactivity_donebutton">Login</string>

	<!-- Error messages -->
	<string name="setservercredentialsactivity_hint">note: default accounts are\njdoe / password \nbsmith / password\n\nremember to launch LabServer</string><string name="toast_loginfailed">Login failed</string>
	<string name="error_toast_rest_problem">Couldn\'t communicate with server</string>
	<string name="error_toast_http_error">HTTP error: </string>
	<string name="error_toast_json_problem">Couldn\'t interpret server response</string>
	<string name="error_transfer_same_account">Can\'t transfer to same account</string>
	<string name="error_transfer_invalid_amount">Invalid amount</string>
	<string name="error_passwords_not_matching">Passwords don\'t match</string>
	<string name="error_toast_hasherror">The password checking and setting mechanism has failed. Please see your application vendor, as this is unrecoverable.</string>
	<string name="error_ssl_algorithm">The SSL mechanism has failed due to an unsupported algorithm. Please see your application vendor, as this is unrecoverable.</string>
	<string name="error_ssl_keymanagement">The SSL mechanism has failed due to a key management problem. Please see your application vendor, as this is	unrecoverable.</string>
	<string name="error_ssl_general">SSL Communication error</string>
	<string name="error_invalid_statment">Can\'t display selected statement</string>
	<string name="initialsetup_success">Application is now successfully set up</string>

	<!-- 
    <string name="
    "></string>
     -->
	<string name="securitycompasstitle">ExploitMe Mobile by Security Compass 2012</string>
	<string name="developermenu">Developer Debugging</string>
	<string name="loginscreen_prompt">EMM is locked</string>
	<string name="sclogo_desc">SCLOGO</string>
	
</resources>
