<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    		android:id="@+id/ScrollView02" 
            android:layout_width="match_parent" 
            android:layout_height="match_parent">
	<LinearLayout 
		android:orientation="vertical" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_horizontal" android:visibility="visible" android:id="@+id/root_view">
	
	    <ImageView android:layout_height="wrap_content" android:id="@+id/imageView1" 
		    android:contentDescription="@string/sclogo_desc"
		    android:src="@drawable/sclogo" 	    
		    android:padding="10dp"
		    android:layout_width="wrap_content" />
	    
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/setservercredentialsactivity_configureprompt" 
			android:textSize="20sp"
		    android:textStyle="bold" 
		    android:gravity="center"
		    android:textColor="#FFFFFF"/>
		
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/setservercredentialsactivity_username"
			android:padding="10dp"/>
		
		<EditText
		    android:id="@+id/setservercredentialsactivity_username"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:imeOptions="actionNext"
		    android:inputType="text"
		    android:padding="10dp"
		    android:textSize="16sp" />
		
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/setservercredentialsactivity_password"
			android:padding="10dp" />
		
		<EditText
		    android:id="@+id/setservercredentialsactivity_password"
		    android:layout_width="300dp"
		    android:layout_height="wrap_content"
		    android:imeOptions="actionDone"
		    android:inputType="text"
		    android:padding="10dp"
		    android:password="true"
		    android:textSize="16sp" />
		
		<Button android:id="@+id/setservercredentialsactivity_donebutton"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/setservercredentialsactivity_donebutton"
			android:paddingLeft="20dp" android:paddingRight="20dp"
			android:padding="10dp" />
	
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/setservercredentialsactivity_hint" 
			android:textSize="16sp" 
			android:padding="10dp" 
			android:textColor="#FFFFFF"/>
		
		
	</LinearLayout>
</ScrollView>