<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:gravity="center_horizontal">

	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setupunlockactivity_configureprompt"/>
	<TextView  android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setupunlockactivity_password" android:paddingBottom="10dp"/>
	<EditText android:id="@+id/setupunlockactivity_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:imeOptions="actionNext"/>
	<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/setupunlockactivity_repeat_password" android:paddingTop="20dp" android:paddingBottom="10dp"/>
	<EditText android:id="@+id/setupunlockactivity_repeat_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:password="true" android:imeOptions="actionDone"/>
	<Button android:id="@+id/setupunlockactivity_donebutton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/setupunlockactivity_donebutton" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_marginTop="20dp"/>
	
</LinearLayout>