<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_height="fill_parent"
	android:layout_width="fill_parent">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="center_horizontal">

		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:src="@drawable/banner"
			android:padding="20dp" />

	</LinearLayout>

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:gravity="center_horizontal">

		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/transferscreen_fromtext" />
		<Spinner android:id="@+id/transferscreen_fromaccount_spinner"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/transferscreen_totext" />
		<Spinner android:id="@+id/transferscreen_toaccount_spinner"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />

		<Button android:id="@+id/transferscreen_transfer_button"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/transferscreen_transfer_button" android:layout_margin="20dp"/>

	</LinearLayout>

</LinearLayout>